--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -14,6 +14,7 @@
     --color-black:#000;
     --color-fd:#E7EEFD;
     --color-blue:#0057FF;
+    --color-gray:#E3E3E3;
     --color-d9:#D9D9D9;
     --color-7b:#7B7B7B;
     --color-52:#EE2A52;
@@ -140,6 +141,13 @@ input.form-control:focus {
             background: var(--color-52);
         }
     }
+    &.btn-secondary {
+        background: var(--color-gray);
+        color: var(--color-7b);
+        &:hover {
+            background: var(--color-52);
+        }
+    }
 }
 
 .checkbox-container {
@@ -171,7 +179,7 @@ input.form-control:focus {
         height: 16px;
         width: 16px;
         background-color: transparent;
-        border: 1px solid  var(--color-blue);
+        border: 1px solid #A6A6A6;
         border-radius: 4px;
         &::after {
             content: "";
@@ -188,6 +196,9 @@ input.form-control:focus {
             transform: rotate(45deg);
         }
     }
+    input:checked~.checkmark {
+        border-color: var(--color-blue);
+    }
     input:checked~.checkmark:after {
         display: block;
     }
@@ -199,7 +210,7 @@ input.form-control:focus {
   cursor: pointer;
   font-size: 14px;
   font-weight: 400;
-  color: var(--color-7b);
+  color: var(--color-3d);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -216,7 +227,7 @@ input.form-control:focus {
   height: 18px;
   width: 18px;
   background-color: transparent;
-  border: 1px solid var(--color-7bf);
+  border: 1px solid var(--color-d9);
   border-radius: 50%;
   &:after {
     content: "";
@@ -233,6 +244,10 @@ input.form-control:focus {
     background:  var(--color-7bf);
 }
 }
+input:checked ~ .checkmark {
+    border-color: var(--color-7bf);
+}
+
 input:checked ~ .checkmark:after {
   display: block;
 }
@@ -255,10 +270,29 @@ input:checked ~ .checkmark:after {
         position: relative;
         bottom: -14px;
         margin-left: 20px;
+        margin-right: 20px;
         margin-bottom: 0;
         background: var(--color-white);
         padding: 2px;
         font-weight: 600;
+        font-size: 14px;
+        z-index: 1;
+    }
+}
+.hg {
+    .form-label {
+        &.float {
+            bottom: -24px;
+        }
+    }
+    .form-control {
+        height: 78px;
+    }
+}
+textarea {
+    &.form-control {
+        height: 90px;
+        padding-top: 24px;
         font-size: 14px;
     }
 }
@@ -283,6 +317,9 @@ select {
     font-size: 18px;
     font-weight: 500;
     color: var(--color-black);
+    &:focus {
+        box-shadow: none;
+    }
     &::placeholder {
         color: rgba(0,0,0,0.16);
     }
@@ -337,4 +374,7 @@ select {
         font-weight: 400;
         margin-bottom: 0;
     }
+}
+.mt-40 {
+    margin-top: 40px;
 }
