--- a/src/assets/styles/_login.scss
+++ b/src/assets/styles/_login.scss
@@ -133,6 +133,7 @@
         @media only screen and (max-width: 767px) {
             max-width: 100%;
             flex-basis: 100%;
+            height: auto;
         }
         @media only screen and (max-width: 575px) {
             padding: 30px 15px;
